metadata/objects/Widget_CSS_Definition__c.object
<CustomObject>
    <fields>
        <fullName>CSS__c</fullName>
        <label>CSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Color</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Widget CSS Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>CSS__c</columns>
        <columns>Display_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Widget_Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widget CSS Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>